# SDF_TO_PDBQT

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze_and_filter_sdf.py  docker-compose.yml  environment.yml  md_barbun.slurm  md_debug.slurm  md_orfoz.slurm  pyproject.toml  requirements.txt  run_parallel.sbatch  sdf_splitter.py  sdf_to_pdbqt_converter.py  setup.py  worker.py
tests/: __init__.py  test_sdf_splitter.py  test_worker.py
